@@ -161,3 +161,10 @@ FILE *open_logfile(const char *basename)
   }
   return NULL;
 }
+
+int archdep_default_logger(const char *level_string, const char *format,
+                                                                va_list ap)
+{
+    return 0;
+}
+
